[package]
name = "claude-manager"
version = "0.1.4"
edition = "2024"
description = "A terminal UI for managing multiple Claude Code sessions organized by projects and tasks"
license = "MIT"
repository = "https://github.com/Bendzae/claude-manager"
readme = "README.md"
keywords = ["claude", "tui", "tmux", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
anyhow = "1"
ansi-to-tui = "8"
serde_json = "1"
tui-markdown = "0.3"
